# predicting_fouls

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: foulsDataset.csv
notebooks/: Comparing models.ipynb
src/etl/: clean.py  encoding.py  feature_scaling.py  feature_selection.py
src/evaluation/: evaluation_metrics.py
src/models/: functions.py
