[tool.poetry]
name = "predicting-fouls"
version = "0.1.0"
description = ""
authors = ["James Lai"]
readme = "README.md"
packages = [{include = "predicting_fouls"}]

[tool.poetry.dependencies]
python = "3.10.8"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
pylint = "^2.15.6"
flake8 = "^5.0.4"
pytest = "^7.2.0"
mypy = "^0.991"
jupyter-black = "^0.3.1"
ipykernel = "^6.17.1"
seaborn = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
